# fast_math_cpp

./: CMakeLists.txt  README.md  README_jp.md
.github/workflows/: ci.yml
include/: fast_math.hpp
sample_result/: raspi4_test_result.txt  x86_test_result.txt
src/: fast_math.cpp
test/: fast_math_test.cpp
